# gemini-repo-cli

./: .gitignore  README.md  awesome.md  changelog.md  pyproject.toml  requirements.txt  setup.py
docs/: api.md  getting_started.md  index.md  license.md  usage.md
gemini_repo/: __init__.py  gemini_repo_api.py
gemini_repo_cli/: gemini_repo_cli.py
p/: kicklang  wearemeta
src/gemini_repo/: __init__.py  api.py  base_api.py  cli.py  ollama_api.py
src/gemini_repo_cli/: gemini_repo_cli.py
src/ui/: qt6.py  tkinter.py
